objects/EUR_CRM_PRS_Priority_Level_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Building_Potential_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Brand_Building_Potential__r.EUR_CRM_Segmentation_BBP_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Building Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Building_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Building Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Priority Level Criteria (EU) (Brand Building Potential)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Priority_Level_Criteria_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Business_Potential__r.EUR_CRM_Segmentation_BP_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Priority Level Criteria (EU) (Business Potential)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Priority_Level_Criteria_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Priority_Level__c</fullName>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PRS Priority Level Criteria (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_PRS_PriorityLevelCriteriaView</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Brand_Building_Potential_Name__c</columns>
        <columns>EUR_CRM_Business_Potential_Name__c</columns>
        <columns>EUR_CRM_Brand_Building_Potential__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Priority_Level__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Priority_Level_Criteria__c.EUR_BE_PRS_Priority_Level_Criteria</value>
        </filters>
        <label>EUR BE All PRS_PriorityLevelCriteriaView</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_PriorityLevelCriteriaView</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_Business_Potential_Name__c</columns>
        <columns>EUR_CRM_Brand_Building_Potential__c</columns>
        <columns>EUR_CRM_Brand_Building_Potential_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Priority_Level__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Priority_Level_Criteria__c.EUR_BG_PRS_Priority_Level_Criteria</value>
        </filters>
        <label>EUR BG All PRS_PriorityLevelCriteriaView</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-PLC-{0000000000}</displayFormat>
        <label>PRS Priority Level Criteria No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Priority Level Criteria (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_PRS_Priority_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR BE PRS Priority Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Priority_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR BG PRS Priority Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Priority_Level_Criteria</fullName>
        <active>true</active>
        <label>PRS Priority Level Criteria</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>